--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../foto/foto1.jpg") repeat scroll center center / cover;
+  background: url("../foto/foto1.png") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
